tests/baselines/reference/ExportClassWhichExtendsInterfaceWithInaccessibleType.errors.txt
ExportClassWhichExtendsInterfaceWithInaccessibleType.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== ExportClassWhichExtendsInterfaceWithInaccessibleType.ts (1 errors) ====
    module A {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    
        interface Point {
            x: number;
            y: number;
    
            fromOrigin(p: Point): number;
        }
    
        export class Point2d implements Point {
            constructor(public x: number, public y: number) { }
    
            fromOrigin(p: Point) {
                return 1;
            }
        }
    }
    
    